--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       height: 100vh;
     }
     #app {
-      width: 500px;
+      width: 800px;
       margin: 0 auto;
-      border: 1px solid #d9d9d9;
+      box-shadow: 0 0 0 1px rgba(17, 20, 24, .1), 0 1px 1px rgba(17, 20, 24, .2);
       box-sizing: border-box;
     }
     </style>
